--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f11e1f70",
    "metadata": {},
    "outputs": [],
@@ -10,21 +10,22 @@
     "import pandas as pd\n",
     "import os\n",
     "import numpy as np\n",
-    "from configs.config import config\n",
     "from sklearn.model_selection import StratifiedGroupKFold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "628c6ede",
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_tdcsfog = pd.read_csv(config.metadata_tdcsfog)\n",
+    "metadata_tdcsfog = pd.read_csv(\"./data/tdcsfog_metadata.csv\")\n",
     "metadata_tdcsfog[\"fold\"] = None\n",
-    "metadata_defog = pd.read_csv(config.metadata_defog)\n",
+    "train_dir_tdcsfog = \"./data/train/tdcsfog/\"\n",
+    "metadata_defog = pd.read_csv(\"./data/defog_metadata.csv\")\n",
     "metadata_defog[\"fold\"] = None\n",
+    "train_dir_defog = \"./data/train/defog/\"\n",
     "\n",
     "sgkf = StratifiedGroupKFold(n_splits=5, random_state=42, shuffle=True)\n",
     "\n",
@@ -39,7 +40,7 @@
     "\n",
     "    metadata_tdcsfog.loc[valid_index, \"fold\"] = i\n",
     "\n",
-    "metadata_tdcsfog[\"fpath\"] = [f\"{config.train_dir_tdcsfog}{_id}.csv\" for _id in metadata_tdcsfog[\"Id\"]]\n",
+    "metadata_tdcsfog[\"fpath\"] = [f\"{train_dir_tdcsfog}{_id}.csv\" for _id in metadata_tdcsfog[\"Id\"]]\n",
     "\n",
     "# defog\n",
     "# Remove entries with no events first\n",
@@ -49,7 +50,7 @@
     "metadata_defog[\"count\"] = 0\n",
     "\n",
     "for f in metadata_defog[\"Id\"]:\n",
-    "    fpath = f\"{config.train_dir_defog}{f}.csv\"\n",
+    "    fpath = f\"{train_dir_defog}{f}.csv\"\n",
     "    if not os.path.exists(fpath):\n",
     "        continue\n",
     "\n",
@@ -72,7 +73,7 @@
     "    metadata_defog.loc[valid_index, \"fold\"] = i\n",
     "\n",
     "\n",
-    "metadata_defog[\"fpath\"] = [f\"{config.train_dir_defog}{_id}.csv\" for _id in metadata_defog[\"Id\"]]\n",
+    "metadata_defog[\"fpath\"] = [f\"{train_dir_defog}{_id}.csv\" for _id in metadata_defog[\"Id\"]]\n",
     "\n",
     "metadata_tdcsfog[\"type\"] = \"tdcs\"\n",
     "metadata_defog[\"type\"] = \"defog\"\n",
@@ -82,17 +83,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0eb481e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fpath</th>\n",
+       "      <th>type</th>\n",
+       "      <th>fold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>./data/train/defog/02ea782681.csv</td>\n",
+       "      <td>defog</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>./data/train/defog/06414383cf.csv</td>\n",
+       "      <td>defog</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>./data/train/defog/092b4c1819.csv</td>\n",
+       "      <td>defog</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>./data/train/defog/0c55be4384.csv</td>\n",
+       "      <td>defog</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>./data/train/defog/0d7ab3a9f9.csv</td>\n",
+       "      <td>defog</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               fpath   type fold\n",
+       "0  ./data/train/defog/02ea782681.csv  defog    4\n",
+       "1  ./data/train/defog/06414383cf.csv  defog    3\n",
+       "2  ./data/train/defog/092b4c1819.csv  defog    0\n",
+       "3  ./data/train/defog/0c55be4384.csv  defog    4\n",
+       "4  ./data/train/defog/0d7ab3a9f9.csv  defog    3"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "metadata.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d0be5e54",
    "metadata": {},
    "outputs": [],
@@ -110,7 +186,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.12"
   }
  },
